--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,24 @@
+body {
+  background-color: #bdd5fc;
+}
+
+.container {
+  text-align: center;
+}
+
+.border {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+#name-input {
+  padding-left: 300px;
+}
+
+#user-color {
+  width: 120px;
+}
+
 #survey-finished {
   display: none;
 }
