Made it so depending on if the user answered if they had coding experience, it will show them if they should learn JavaScript

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,10 @@ input[type="text"], textarea {
   width: 120px;
 }
 
+#calculate {
+  display: none;
+}
+
 #survey-finished {
   display: none;
 }
