Added Exit and Restart buttons. Fixed bugs that caused divs to show randomly

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,3 +75,9 @@ input[type="text"], textarea {
 #JDiv {
   display: none;
 }
+
+#exit-message {
+  display: none;
+  vertical-align: top;
+  text-align: left;
+}
